--- a/requirements.txt
+++ b/requirements.txt
@@ -60,7 +60,7 @@ idna==3.10
     #   httpx
 iniconfig==2.1.0
     # via pytest
-ipython==9.2.0
+ipython>=8.37.0
     # via dsnd-dashboard-project (pyproject.toml)
 ipython-pygments-lexers==1.1.1
     # via ipython
